kubernetes/external-dns/components/openshift/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: external-dns
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        cidrSelector: 10.101.10.5/32
    - type: Allow
      to:
        cidrSelector: 10.101.10.7/32
    - type: Allow
      to:
        dnsName: unifi.arthurvardevanyan.com
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
